...
        viewController?.blockButtons(onOf: true)
        
        if currentQuestionIndex == questionsAmount - 1 {
            let text = "Вы ответили на \(correctAnswers) из 10, попробуйте еще раз!"
            
            let viewModel = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: text,
                buttonText: "Сыграть ещё раз")
            viewController?.show(quiz: viewModel)
        } else {

            currentQuestionIndex += 1
...
